--- a/inst/pres/20230331/index.qmd
+++ b/inst/pres/20230331/index.qmd
@@ -94,11 +94,10 @@ Nosso foco está em Captchas de __texto em imagem__, porque é um dos mais utili
 ![](assets/img/recaptcha-example.gif){fig-align="center"}
 
 
-## Uso indevido em serviços públicos
+## Captchas impedem transparência ativa
 
-- A Constituição Federal e Lei de Acesso à Informação (LAI) garantem acesso a informações públicas
-- Problema da LAI: esforço e formato dos dados: transparência passiva.
-- __Solução__: disponibilizar dados de forma aberta: transparência ativa
+- Transparência passiva: pedidos de Lei de Acesso à Informação (LAI)
+- Transparência ativa: dados abertos
 
 <br/>
 
@@ -107,14 +106,14 @@ Nosso foco está em Captchas de __texto em imagem__, porque é um dos mais utili
 ### Judiciário e dados abertos
 
 - Os dados são públicos, mas não são abertos
-- Boa parte dos tribunais possuem Captchas
+- Muitos sites de tribunais possuem Captchas
 - Dificulta a atividade fim da [Associação Brasileira de Jurimetria (ABJ)](https://abj.org.br)
 - Tribunais dificilmente respondem a pedidos de LAI
 - Raspagem de dados é a __única alternativa__
 
 :::
 
-## Queremos resolver Captchas? {auto-animate=true}
+## {auto-animate=true}
 
 <br/>
 
@@ -125,7 +124,7 @@ Nosso foco está em Captchas de __texto em imagem__, porque é um dos mais utili
 
 ![[Fonte: F5](https://www.f5.com/labs/articles/cisotociso/i-was-a-human-captcha-solver)](assets/img/2captcha.gif){width=60%}
 
-## Queremos resolver Captchas? {auto-animate=true}
+## {auto-animate=true}
 
 <br/>
 
@@ -261,7 +260,7 @@ Desenvolver um método __inovador__, chamado WAWL (*Web Automatic Weak Learning*
 
 :::
 
-## A oportunidade
+## Oráculo: a oportunidade
 
 - Quando preenchemos um Captcha no site, ele nos diz se acertamos ou não
 - Mas a informação é limitada: o site só diz de __acertamos__ ou __erramos__.
@@ -278,18 +277,20 @@ Desenvolver um método __inovador__, chamado WAWL (*Web Automatic Weak Learning*
 ![](assets/img/esquema-oraculo.png){fig-align="center"}
 
 - Conceito de oráculo: resposta do site sobre acerto/erro
-- Oráculos existem em todos os sites com Captchas, por construção
-- Podem fornecer mais ou menos informação, dependendo da __quantidade de chutes__ permitida para um mesmo Captcha
+- Oráculos existem em __todos__ os sites com Captchas
+- Podem permitir __vários chutes__ para um mesmo Captcha
 
 ## Nossa solução {background-image="./assets/img/walle.webp" background-opacity="0.2" .center .center-x}
 
 ::: {style="margin-top: 200px; font-size: 1.4em"}
 
-- Técnica proposta: Web Automatic Weak Learning (WAWL)
+__Web Automatic Weak Learning (WAWL)__
+
+- Parte de um modelo inicial
 
 - Obtém novos dados automaticamente
 
-- Combina __raspagem de dados__ e __aprendizado fracamente supervisionado__
+- Atualiza o modelo
 
 :::
 
@@ -297,15 +298,13 @@ Desenvolver um método __inovador__, chamado WAWL (*Web Automatic Weak Learning*
 
 ![](assets/img/wawl.png){fig-align="center"}
 
-- Modelo inicial: pode ser ajustado com uma base completamente anotada
-- Também pode ser um super-modelo generalista
+- __Modelo inicial__: pode ser ajustado com uma pequena base completamente anotada ou pode ser um super-modelo generalista.
 
 ## Vantagens do WAWL
 
 - Aproveita os recursos disponíveis: __base de dados__ virtualmente __infinita__
 - Fácil de implementar: só precisa de uma __mudança na função de perda__
 - __Depende de um raspador__, cujo tempo de desenvolvimento é __negligenciável__ devido à necessidade de construí-los na prática
-
 
 ## Arquitetura da rede neural {visibility='`r type`'}
 
@@ -323,7 +322,8 @@ knitr::include_graphics("assets/img/diagrama-modelo-cnn.png")
 $$\mathcal L(g(\mathbf x), {\mathbf y}) = -\log\left[1 - \sum_{y \in \mathcal A} {g_y}(\mathbf x) I(y\notin {\mathbf y})\right]$$
 
 - Quando a informação é __parcial__, a __perda é maior__ quando o modelo dá alta probabilidade para um __rótulo incorreto__.
-- Quando a informação é __completa__, utilizamos a função de __perda original__.
+- Quando a informação é __completa__, utilizamos a função de __perda original__.  
+- Como ler a função: "Não dê altas probabilidades para rótulos que sabemos que estão errados!"
 
 ## Exemplo {visibility='`r type`'}
 
@@ -404,8 +404,9 @@ $$|\mathcal R(\hat f) - \mathcal R(f^*)|$$
 |trf5   |![trf5](assets/img/dados_trf5.jpg){height=80px}|Tribunal Regional Federal 5                         |
 |trt    |![trt](assets/img/dados_trt.jpeg){height=80px}|Tribunal Regional do Trabalho 3                     |
 
+Também consideramos Captchas artificiais, criados diretamente no R.
 
-## Captchas artificiais
+## Captchas artificiais {visibility='`r type`'}
 
 - Facilita testes e simulações
 - Evita necessidade de acesso à internet e construção de bases de dados específicas
@@ -424,7 +425,7 @@ plot(gen)
 
 :::
    
-## Para baixar os dados {auto-animate=true}
+## Para baixar os dados {visibility='`r type`' auto-animate=true}
 
 ### Raspagem de dados
 
@@ -532,8 +533,8 @@ Ajustar modelo final para as bases de treino construídas
 
 ### Experimentos adicionais
 
-- Aplicação iterada do WAWL para verificar melhorias
-- Aprendizado online: incorporação do download de dados dentro da construção do *minibatch*
+- Aplicação __iterada__ do WAWL para verificar melhorias
+- __Aprendizado online__: download de dados dentro do *minibatch*
 
 :::
 
@@ -682,7 +683,7 @@ doutorado::da_online |>
   ggthemes::theme_hc(14) +
   ggplot2::scale_y_continuous(labels = scales::percent, limits = c(0,1)) +
   ggplot2::scale_x_continuous(limits = c(0, 104)) +
-  ggplot2::labs(x = "Época", y = "Acurácia (base de validação)") +
+  ggplot2::labs(x = "Época", y = "Acurácia") +
   ggplot2::annotate(
     "text",
     x = 100,
@@ -690,7 +691,7 @@ doutorado::da_online |>
     label = scales::percent(max(doutorado::da_online$captcha.acc)),
     vjust = -.4,
     hjust = -.1,
-    size = 3.5,
+    size = 5.7,
     colour = "purple"
   )
 ```
@@ -751,7 +752,7 @@ Após 100 épocas, o modelo baixou 6391 imagens e chegou em uma acurácia de 87%
 :::
 :::{.column width=30%}
 
-#### Resultados Empíricos
+#### Resultados empíricos
 
 - Acurácia do modelo aumentada em 3x
 - Possibilidade de aplicação iterada para maior poder preditivo
@@ -785,7 +786,7 @@ Após 100 épocas, o modelo baixou 6391 imagens e chegou em uma acurácia de 87%
 #### Sociedade em geral
 
 - Quebra de incentivo nefasto
-- Impacto positivo nas relações de trabalho
+- Possibilitar novas pesquisas
 :::
 
 :::
@@ -795,8 +796,7 @@ Após 100 épocas, o modelo baixou 6391 imagens e chegou em uma acurácia de 87%
 ### Aprimoramentos
 
 - Resultados matemáticos mais robustos
-- Estudo mais completo da aplicação iterada
-- Estudo mais completo do aprendizado online
+- Aprofundamento dos estudos de aplicação iterada e aprendizado online
 
 ### Extensões
 
@@ -804,13 +804,13 @@ Após 100 épocas, o modelo baixou 6391 imagens e chegou em uma acurácia de 87%
 - Integração com GPT-4?
 
 
-# Obrigado!  {visibility='uncounted'}
+# Obrigado! {visibility='uncounted'}
 
 :::{.walle}
 ![](assets/img/walle.gif)
 :::
 
-## Referências usadas na apresentação
+## Referências usadas na apresentação {visibility='uncounted'}
 
 ::: {#refs}
 :::
